# python_template

./: .env.dist  .gitignore  Pipfile  README.rst  cookiecutter.json  pyproject.toml  tox.ini
.circleci/: config.yml
docs/source/: conf.py  index.rst
hooks/: common.py  post_gen_project.py  post_gen_project.sh  pre_gen_project.py
package/: __init__.py  __main__.py  _logging_.py  logging.py  settings.py
tests/: conftest.py
tests/features/steps/: 000.py
tests/unit/: test_000_import.py
{{ cookiecutter.project_name }}/: .env.dist  .gitignore  CONTRIBUTORS.txt  LICENSE  README.rst  pyproject.toml  settings-schema.json  tox.ini
{{ cookiecutter.project_name }}/.circleci/: config.yml
{{ cookiecutter.project_name }}/docs/source/: conf.py
{{ cookiecutter.project_name }}/tests/: .env.test  __init__.py  conftest.py
{{ cookiecutter.project_name }}/tests/features/steps/: 000.py
{{ cookiecutter.project_name }}/tests/integration/: test_000_import.py  test_000_slow_import.py
{{ cookiecutter.project_name }}/tests/unit/: test_000_import.py  test_001_hypothesis.py  test_001_incremental.py  test_002_hypothesis.py
{{ cookiecutter.project_name }}/{{ cookiecutter.slug_name }}/: __init__.py  __main__.py  settings.py
{{ cookiecutter.project_name }}/{{ cookiecutter.slug_name }}/_meta/: __init__.py  base_settings.py  metadata.py
{{ cookiecutter.project_name }}/{{ cookiecutter.slug_name }}/utils/: __init__.py  _log.py  base_settings.py  class_property.py  io.py
{{ cookiecutter.project_name }}/{{ cookiecutter.slug_name }}/utils/_dotenv/: __init__.py
{{ cookiecutter.slug_name }}/: .editorconfig  .env  .env.dist  .gitignore  .readthedocs.yml  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  tox.ini
{{ cookiecutter.slug_name }}/.circleci/: config.yml
{{ cookiecutter.slug_name }}/docs/: requirements.txt
{{ cookiecutter.slug_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.slug_name }}/tests/: .env.test  __init__.py  conftest.py
{{ cookiecutter.slug_name }}/tests/features/: environment.py  sample_outline.feature
{{ cookiecutter.slug_name }}/tests/features/steps/: 000.py  gherkin_hypothesis.py  sample_outline.py
{{ cookiecutter.slug_name }}/tests/integration/: test_000_import.py  test_000_skippable.py
{{ cookiecutter.slug_name }}/tests/unit/: test_000_import.py  test_000_log.py  test_000_settings.py  test_001_hypothesis.py  test_002_settings.py  test_003_meta.py  test_004_log.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/: __init__.py  __main__.py  settings.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/_meta/: __init__.py  base_settings.py  dotenv_.py  log.py  metadata.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/scripts/: __init__.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/scripts/dev/: __init__.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/utils/: __init__.py  caching.py  classproperty.py  extensions.py  timing.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/utils/io/: caching.py  locate.py  pandas_.py  path_.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/utils/io_/: __init__.py  caching.py  locate.py  pandas_.py  path_.py
{{ cookiecutter.slug_name }}/{{ cookiecutter.slug_name }}/utils/text/: __init__.py  case.py  preprocessing.py
