[tool.poetry]
  project_name = "{{ cookiecutter.project_name }}"
  name = "{{ cookiecutter.slug_name }}"
  version = "{{ cookiecutter.version }}"
  release = "{{ cookiecutter.release }}"
  description = "{{ cookiecutter.description }}"
  readme = "README.rst"
  author = "{{ cookiecutter.author_name }} <{{ cookiecutter.author_mail }}>"
  authors = [
    "{{ cookiecutter.author }}"
  ]
  maintainer = "{{ cookiecutter.author_name }} <{{ cookiecutter.author_mail }}>"
  {{- '\n  license = "{{ cookiecutter.license }}"' if cookiecutter.license != "" else '' -}}
  {{- '\n  copyright = "{{ cookiecutter.copyright }}"'  if cookiecutter.copyright != "" else '' -}}
  {{- '\n  url = "{{ cookiecutter.url }}"' if cookiecutter.url != "" else '' }}


[tool.poetry.scripts]
  {{ cookiecutter.slug_name }} = "{{ cookiecutter.slug_name }}.__main__:_Fire"

[tool.poetry.dependencies]
  python = "^{{ cookiecutter.python_version }}"
  fire = "^0.1.3"
  petri = {git = "https://github.com/pwoolvett/petri.git"}
  {{- '\n  pandas = "^0.23.4"' if "pandas" in cookiecutter.additional_libs else '' -}}
  {{- '\n  tqdm = "^4.28"' if "tqdm" in cookiecutter.additional_libs else '' }}


[tool.poetry.dev-dependencies]
  {{- '\n  autopep8 = "^1.4"' if "autopep8" in cookiecutter.formatter else '' -}}
  {{- '\n  black = { git = "https://github.com/ambv/black.git", branch = "master" }' if "black" in cookiecutter.formatter else '' -}}

  {{- '\n  pylint = "^2.3"' if "mypy" in cookiecutter.linter else '' -}}
  {{- '\n  mypy = "^0.701"\n  mypy-extensions = "^0.4"' if "flake8" in cookiecutter.linter else '' -}}
  {{- '\n  bandit = "^1.5"' if "bandit" in cookiecutter.linter else '' -}}

  {{- '\n  pytest = "^4.0"' if "pytest" in cookiecutter.testing else '' -}}
  {{- '\n  coverage = "^4.5"' if "coverage" in cookiecutter.testing else '' -}}
  {{- '\n  pytest-cov = "^2.6"' if "pytest" in cookiecutter.testing and "coverage" in cookiecutter.testing else '' -}}
  {{- '\n  hypothesis = "^4.17"' if "hypothesis" in cookiecutter.testing else '' -}}
  {{- '\n  behave = "^1.2"' if "behave" in cookiecutter.testing else '' -}}

  {{- '\n  Sphinx = "^1.8"' if "sphinx" in cookiecutter.linter else '' -}}
  {{- '\n  sphinx_rtd_theme = "^0.4.2"' if "rtd" in cookiecutter.linter else '' -}}
  {{- '\n  sphinx-autodoc-typehints = "^1.5"' if "autodoc" in cookiecutter.linter else '' }}

[build-system]
  requires = ["poetry>=0.12"]
  build-backend = "poetry.masonry.api"
