[tool.poetry]
  project_name = "{{ cookiecutter.project_name }}"
  name = "{{ cookiecutter.slug_name }}"
  version = "{{ cookiecutter.version }}"
  release = "{{ cookiecutter.release }}"
  description = "{{ cookiecutter.description }}"
  readme = "README.rst"
  author = "{{ cookiecutter.author_name }} <{{ cookiecutter.author_mail }}>"
  authors = [
    "{{ cookiecutter.author }}"
  ]
  maintainer = "{{ cookiecutter.author_name }} <{{ cookiecutter.author_mail }}>"
  license = "{{ cookiecutter.license }}"
  copyright = "{{ cookiecutter.copyright }}"
  url = "{{ cookiecutter.url }}"

[tool.poetry.scripts]
{{ cookiecutter.slug_name }} = '{{ cookiecutter.slug_name }}.__main__:_Fire'

[tool.poetry.dependencies]
  python = "^{{ cookiecutter.python_version }}"
  fire = "^0.1.3"
  tqdm = "^4.28"
  pandas = "^0.23.4"
  Autologging = "^1.2"
  petri = {git = "https://github.com/pwoolvett/petri.git"}


[tool.poetry.dev-dependencies]
  black = { git = "https://github.com/ambv/black.git", branch = "master" }
  pytest = "^4.0"
  coverage = "^4.5"
  pytest-cov = "^2.6"
  flake8 = "^3.6"
  behave = "^1.2"
  Sphinx = "^1.8"
  sphinx_rtd_theme = "^0.4.2"
  sphinx-autodoc-typehints = "^1.5"

[build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
